<?xml version="1.0"?>
<package format="2">
    <name>better_teleop</name>
    <version>1.0.0</version>
    <description>The better_teleop package</description>

    <maintainer email="lioott@ethz.ch">Lionel Ott</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>
</package>
